--- a/css/styles.css
+++ b/css/styles.css
@@ -254,7 +254,7 @@ text-decoration: none;
 {
     
     width: 300px;
-    height: 400px;
+    height: 450px;
     border-radius: 2%;
 overflow: hidden;
 margin: 20px ;
@@ -284,4 +284,57 @@ padding: 20px;
 }
 .pr1  .pr_details h2{
     padding-bottom: 20px;
+}
+
+@media (max-width:566px)
+{
+    content .details
+    {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding:50px;
+    box-sizing: border-box;
+    }
+    .navbar .element
+{
+    height: 15vh;
+    padding: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 0px auto;
+    justify-content: center;
+
+}
+.circle
+{
+  
+    width: 200px;
+    height: 200px;
+}
+.circle img
+{
+    width: 200px;
+    
+}
+.navbar .urls
+{
+padding:10px;
+}
+}
+
+@media (max-width:1066px)
+{
+    .project_details .row1
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding:20px 0px;
+}
 }
