--- a/css/styles.css
+++ b/css/styles.css
@@ -158,8 +158,9 @@ content
 content .details
 {
 
-background: linear-gradient(to right, #292E49, #536976, #BBD2C5); 
-
+background: linear-gradient(to right, #292e49ad, #53697687, #bbd2c5aa), url('../resources/images/wall2.jpg'); 
+background-size: cover;
+background-attachment: fixed;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -231,6 +232,7 @@ text-decoration: none;
 .btn:hover
 {
     background:rgb(216, 159, 3) ;
+    cursor: pointer;
 }
 .projects
 {
@@ -353,6 +355,7 @@ padding:10px;
     flex-direction: column;
     background:linear-gradient(rgba(0, 0, 0, 0.544),rgba(0, 0, 0, 0.537)) , url('../resources/images/mm.jpg');
     background-size: cover;
+    background-attachment: fixed;
 }
 .contact .contact_content
 {
@@ -483,7 +486,7 @@ color: rgb(179, 176, 176);
 }
 @media(max-width:991px){
     .contact{
-        padding: 50px;
+        padding: 150px 0px;
     }
     .detailsc{
         flex-direction: column;
@@ -498,4 +501,53 @@ color: rgb(179, 176, 176);
     .contactForm h2{
         text-align: center;
     }
+}
+
+
+
+.My_Resume
+{
+    background:linear-gradient(rgba(0, 0, 0, 0.789),rgba(0, 0, 0, 0.891)) , url('../resources/images/wall3.jpg');
+    background-size: cover;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
+    height: 100vh;
+    box-sizing: border-box;
+
+}
+.My_Resume .card2
+{
+    border-radius: 25px;
+width: 400px;
+height: 400px;
+background: #686869;
+box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.544);
+
+}
+.imagecard2
+{
+    width: 100%;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    height:300px;
+    overflow: hidden;
+}
+.imagecard2 img
+{
+width: 400px;
+}
+.card2 .buttons 
+{
+    color: #fff;
+    width: ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+.card2 .buttons .download, .view
+{
+    color: #fff;
+    width: 120px;
 }
