--- a/css/styles.css
+++ b/css/styles.css
@@ -521,9 +521,11 @@ color: rgb(179, 176, 176);
 .My_Resume .card2
 {
     border-radius: 25px;
-width: 400px;
-height: 400px;
+width: 370px;
+height: 370px;
 background: #686869;
+box-sizing: border-box;
+
 box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.544);
 
 }
@@ -532,12 +534,12 @@ box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.544);
     width: 100%;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
-    height:300px;
+    height:270px;
     overflow: hidden;
 }
 .imagecard2 img
 {
-width: 400px;
+width: 370px;
 }
 .card2 .buttons 
 {
